[package]
name = "dummy_builder"
version = "0.1.0"
edition = "2021"

[dependencies]
tree_hash = "0.5.1"
tree_hash_derive = "0.5.1"
eth2 = { git = "https://github.com/jimmygchen/lighthouse", rev = "2bed36c698d4fd9b94fb591273cf837dca7417b5" }
tokio = { version = "1.0.0", features = ["rt-multi-thread"] }
axum = { version = "0.6.10", features = ["headers"] }
lru = "0.10.0"
serde_json = "1.0.0"
serde = { version = "1.0.0", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
eventsource-client = "0.11.0"
futures = "0.3.26"
ethereum_serde_utils = "0.5.0"
clap = { version = "4.0.0", features = ["derive"] }
