[package]
name = "dummy_builder"
version = "0.1.0"
edition = "2021"

[dependencies]
tree_hash = "0.5.1"
tree_hash_derive = "0.5.1"
eth2 = { git = "https://github.com/sigp/lighthouse", rev = "1db739490e8771666671352cfb96b14f23a93729" }
eth2_network_config = { git = "https://github.com/sigp/lighthouse", rev = "1db739490e8771666671352cfb96b14f23a93729" }
tokio = { version = "1.0.0", features = ["rt-multi-thread"] }
axum = { version = "0.6.10", features = ["headers"] }
lru = "0.10.0"
serde_json = "1.0.0"
serde = { version = "1.0.0", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
eventsource-client = "0.11.0"
futures = "0.3.26"
ethereum_serde_utils = "0.5.0"
clap = { version = "4.0.0", features = ["derive"] }
